Fixed dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -51,10 +51,6 @@ body{
   box-shadow: 0 0 1em #2b3945;
 }
 
-#dark button{
-  display: none;
-}
-
 #dark .nav{
   background-color: #2b3945;
   color: #fff;
@@ -70,7 +66,11 @@ body{
   color: #fff;
   background-color: #2b3945;
   box-shadow: 0 0 1em #2b3945;
-  
+}
+
+#dark .submit{
+  background-color: #2b3945;
+  color: #fff;
 }
 
 #dark .error h4{
@@ -434,6 +434,10 @@ button:focus{
 
   .info-img{
     width: 90vw;
+  }
+
+  .error h4{
+    font-size: 3rem;
   }
 }
 
